HVAC Backup 2/objects/Template_Variable_Configuration__c(1).object
<CustomObject>
    <fields>
        <fullName>External_ID_Backend_DU__c</fullName>
        <externalId>true</externalId>
        <label>External ID Backend DU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Template__c</fullName>
        <label>SMS Template</label>
        <referenceTo>SMS_Template__c</referenceTo>
        <relationshipLabel>Template Variable Configurations</relationshipLabel>
        <relationshipName>Template_Variable_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_of_Object__c</fullName>
        <label>Type of Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>WorkOrder</fullName>
                </value>
                <value>
                    <fullName>ServiceAppointment</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>ReturnOrder</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Survey_Invitation__c</fullName>
                    <label>Survey Invitation</label>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variable_Api_Names__c</fullName>
        <label>Variable Api Names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Template Variable Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Variable Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Variable Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>